[gd_scene load_steps=11 format=3 uid="uid://bqsdeghs7c6v0"]

[ext_resource type="Script" uid="uid://5jnump3raiht" path="res://scripts/room_elements/door/door_opened.gd" id="1_tssck"]
[ext_resource type="Texture2D" uid="uid://c2shryi0nxmku" path="res://art/room_elements/Doors.png" id="1_x6th6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x6th6"]
atlas = ExtResource("1_x6th6")
region = Rect2(0, 40, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n87no"]
atlas = ExtResource("1_x6th6")
region = Rect2(128, 40, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5qnx"]
atlas = ExtResource("1_x6th6")
region = Rect2(64, 40, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tssck"]
atlas = ExtResource("1_x6th6")
region = Rect2(0, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_v5qnx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6th6")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n87no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5qnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6th6")
}],
"loop": false,
"name": &"closing",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tssck")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6th6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5qnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n87no")
}],
"loop": false,
"name": &"opening",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x6th6"]
size = Vector2(24, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tssck"]
size = Vector2(13.5, 31.9375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5qnx"]
size = Vector2(20, 11)

[node name="DoorOpened" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_tssck")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v5qnx")
animation = &"opened"

[node name="EnterBlocker" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_x6th6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-16.75, -0.0625)
scale = Vector2(1.1, 1)
shape = SubResource("RectangleShape2D_tssck")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(16.75, -0.0625)
scale = Vector2(1.1, 1)
shape = SubResource("RectangleShape2D_tssck")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -8)
scale = Vector2(2.24, 0.5)
shape = SubResource("RectangleShape2D_tssck")

[node name="NextRoomTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextRoomTrigger"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_v5qnx")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="NextRoomTrigger" to="." method="_on_next_room_trigger_body_entered"]
